--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for December 18th</h1>
-            <h3>Week 19 Day 1 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for January 5th</h1>
+            <h3>Week 19 Day 2 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            How do you feel about the idea of coding?
+                            Are you an early bird, or a night owl?
                         </li>
                     </ul>
-                    <div class="img-container ">
+                    <div class="img-container more-space light-gray">
                         <img 
-                            src="images/anxious.webp"
-                            alt="things that make me anxious"
+                            src="images/night-owl.webp"
+                            alt="night owl"
                         >
                     </div>
                 </div>
@@ -32,15 +32,15 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Resources</span>FIRST Policies Review and Course Overview</li>
-                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
+                            <li><span class="type">Review</span>CMS, WordPress Dashboard, and Pages vs Posts</li>
+                            <li><span class="type">PowerPoint</span>Intro to WordPress UI - Block Editor</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                            <li><span class="type">Demo</span>Basic Blocks in the Block Editor</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -52,13 +52,12 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Intro to WordPress UI - Dashboard</li>
-                            <li><span class="type">Demo</span>WordPress Dashboard, Themes, and Pages vs. Posts</li>
+                            <li><span class="type">Exercise</span>My First Blog Post</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                        <li><span class="type">Exercise</span>My First Blog Post</li>
                     </ul>
                 </div>
             </div>
