pantheon flow update

--- a/cookbook/appetizers/pantheon-wordpress-setup.html
+++ b/cookbook/appetizers/pantheon-wordpress-setup.html
@@ -118,8 +118,7 @@
                                 called <b>Pantheon</b>.
                             </p>
                             <p>
-                                Visit the following link and click the big 
-                                yellow "Get Started" button on that page:
+                                Start by visiting the following link:
                             </p>
                             <p>
                                 <a
@@ -131,15 +130,32 @@
                                 </a> 
 
                             </p>
+                            <p>
+                                Then, click the big yellow "Get Started" 
+                                button on that page, which will navigate 
+                                you to another page.
+                            </p>
+                            <p>
+                                Click the purple-ish "Create my account"
+                                button to start creating your account.
+                            </p>
                         </div>
                         <div class="imageContainer">
                             <img 
                                 src="images/pantheon-wordpress-setup/01_pantheon_homepage_v2.png" 
-                                alt="Click the Start Free button on the Pantheon Home page"
+                                alt="Click the Get Started button on the Pantheon Home page"
                             >
                             <figcaption>
-                                Click the Start Free button on the Pantheon 
+                                Click the "Get Started" button on the Pantheon 
                                 Home page
+                            </figcaption>
+                            <img 
+                                src="images/pantheon-wordpress-setup/pantheon-createaccount.png" 
+                                alt="Click the Create my account button on the next page"
+                            >
+                            <figcaption>
+                                Click the "Create my account" button on the 
+                                next page
                             </figcaption>
                         </div>
                     </div>
@@ -158,14 +174,14 @@
                             </p>
                             <p class="indent">
                                 If you choose to sign up with an email address,
-                                you will be required to verify that email 
+                                you may be required to verify that email 
                                 address, so be sure to pick an email address
                                 with an Inbox you have access to.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/02_pantheon_signup_v3.png" 
+                                src="images/pantheon-wordpress-setup/pantheon-createaccount-form.png" 
                                 alt="Fill out the required data fields to create your account, or use Google to sign up"
                             >
                             <figcaption>
@@ -175,39 +191,22 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                Once you've successfully created your account,
-                                you'll need to verify your email address before 
-                                you can log in with the credentials
-                                you just entered.
-                            </p>
-                            <p>
-                                After verifying your email address, go ahead
-                                and log in.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/pantheon-wordpress-setup/03_pantheon_login_v2.png" 
-                                alt="Log in page for your newly created Pantheon account"
-                            >
-                            <figcaption>
-                                Log in page for your newly created 
-                                Pantheon account
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                After logging in, you'll be asked to fill out a
+                                After entering your email, you'll be asked to fill out a
                                 bit more information to finish creating your 
                                 account.
+                            </p>
+                            <p>
+                                You will probably be asked to enter your name,
+                                country, and state.
+                            </p>
+                            <p>
+                                You may also be asked to enter your role, in
+                                which case, you would choose the "Student" option.
                             </p>
                             <p class="indent">
                                 NOTE: Pantheon changes their account creation flow 
@@ -217,8 +216,9 @@
                                 required fields that it needs from you.
                             </p>
                             <p>
-                                Fill out the required fields, and click the 
-                                [Continue] button.
+                                Fill out the required fields, and keep progressing
+                                through the account creation flow until you are 
+                                done, and have logged in to your new account.
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -228,32 +228,6 @@
                             >
                             <figcaption>
                                 Completing your Pantheon Account registration
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                After creating your account, you may be asked to 
-                                fill out more information related to 
-                                customization options in a new popup that 
-                                appears.
-                            </p>
-                            <p>
-                                These are optional, and we recommend just
-                                clicking the X in the upper right corner to
-                                close the popup.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/pantheon-wordpress-setup/03_6_customization.png" 
-                                alt="The customization options popup"
-                            >
-                            <figcaption>
-                                The customization options popup
                             </figcaption>
                         </div>
                     </div>
@@ -370,7 +344,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/05_pantheon_createsite_v2.png" 
+                                src="images/pantheon-wordpress-setup/pantheon-sitecreation-options.png" 
                                 alt="Selecting the WordPress option on the 'Create a Site' page" 
                             >
                             <figcaption>
@@ -406,16 +380,27 @@
                                 Leave the Site Region as "United States".
                             </p>
                             <p>
-                                Then click the yellow [Continue] button.
+                                Then click the [Create Site] button.
+                            </p>
+                            <p>
+                                You may get a popup to confirm your Workspace.
+                                Just click the [Confirm] button to continue.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/06_pantheon_createsite_name.png" 
+                                src="images/pantheon-wordpress-setup/pantheon-sitecreation.png" 
                                 alt="The 'Create Your Pantheon Site' form" 
                             >
                             <figcaption>
-                                The 'Create Your Pantheon Site' form
+                                The 'Create New Site' form
+                            </figcaption>
+                            <img 
+                                src="images/pantheon-wordpress-setup/pantheon-sitecreation-confirm.png" 
+                                alt="The 'Create Your Pantheon Site' form" 
+                            >
+                            <figcaption>
+                                The 'Create New Site' form
                             </figcaption>
                         </div>
                     </div>
@@ -428,17 +413,17 @@
                                 to build your site. 
                             </p>
                             <p>
-                                It should only take around 5 minutes.
+                                It should only take around 5 minutes at most.
                             </p>
-                            <p class="indent">
+                            <!-- <p class="indent">
                                 (Don't trust the progress bar; it will 
                                 fill up and then go back down again several 
                                 times as Pantheon builds your site.)
-                            </p>
+                            </p> -->
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/07_pantheon_createsite_inprogress_v2.png" 
+                                src="images/pantheon-wordpress-setup/pantheon-sitecreation-progressbar.png" 
                                 alt="Waiting for Pantheon to build your site" 
                             >
                             <figcaption>
@@ -455,13 +440,12 @@
                                 and turn green when the process is complete.
                             </p>
                             <p>
-                                Click the yellow [Visit your Pantheon 
-                                Site Dashboard] button.
+                                Click the [Go to site dashboard] button.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/08_pantheon_createsite_complete_v2.png" 
+                                src="images/pantheon-wordpress-setup/pantheon-sitecreation-progressbarcomplete.png" 
                                 alt="Pantheon finished creating your site" 
                             >
                             <figcaption>
@@ -493,12 +477,12 @@
                                 only two buttons 
                                 you need to worry about in this course:
                                 <ul>
-                                    <li>Site Admin</li>
+                                    <li>Dev Admin</li>
                                     <li>Clear Caches</li>
                                 </ul>
                             </p>
                             <p>
-                                The [Site Admin] button is important for 
+                                The [Dev Admin] button is important for 
                                 <em>working</em> on assignments.
                             </p>
                             <p>
@@ -508,7 +492,7 @@
                         </div>
                         <div class="imageContainer">
                             <img
-                                src="images/pantheon-wordpress-setup/09_pantheon_site_dashboard_v2.png"
+                                src="images/pantheon-wordpress-setup/pantheon-sitedashboard.png"
                                 alt="The Dashboard of your Pantheon Site"
                             />
                             <figcaption>
@@ -552,7 +536,7 @@
                         </div>
                         <div class="imageContainer">
                             <img
-                                src="images/pantheon-wordpress-setup/09_pantheon_site_dashboard_v2_justsiteadmin.png"
+                                src="images/pantheon-wordpress-setup/pantheon-sitedashboard_onlyadmin.png"
                                 alt="Clicking on the Site Admin button"
                             />
                             <figcaption>
