--- a/cookbook/appetizers/deleting-a-pantheon-site.html
+++ b/cookbook/appetizers/deleting-a-pantheon-site.html
@@ -124,13 +124,13 @@
                             </p>
                             <p>
                                 To begin the process of deleting your site,
-                                click the Settings cogwheel icon in the
+                                click the Settings tab in the
                                 top-right of the screen.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/deleting-a-pantheon-site/02_deletesite_settings.png" 
+                                src="images/deleting-a-pantheon-site/pantheon-deletion-1-settings.png" 
                                 alt="Accessing the Pantheon Site Dashboard's Settings"
                             >
                             <figcaption>
@@ -143,41 +143,23 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                This will open up the Settings popup.
+                                This will switch you to the Settings view.
                             </p>
                             <p>
-                                From here, click on the tab labeled
-                                "Delete site".
+                                From here, scroll all the way down the page 
+                                to the section labeled "Delete site".
+                            </p>
+                            <p>
+                                Click the [Delete] button
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/deleting-a-pantheon-site/03_deletesite_popup.png" 
+                                src="images/deleting-a-pantheon-site/pantheon-deletion-2-deletesite.png" 
                                 alt="Navigating to the 'Delete Site' tab in Settings"
                             >
                             <figcaption>
-                                Navigating to the 'Delete Site' tab in Settings
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <h2 id="p1_step4" class="invisibleInnerAnchorTarget"></h2>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                When you navgiate to the "Delete site" tab,
-                                click the big red [Delete Site] button.
-                            </p>
-                        
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/deleting-a-pantheon-site/04_deletesite_popup_button.png" 
-                                alt="Clicking the [Delete Site] button"
-                            >
-                            <figcaption>
-                                Clicking the [Delete Site] button
+                                Navigating to the 'Delete Site' section in Settings
                             </figcaption>
                         </div>
                     </div>
@@ -199,21 +181,6 @@
                                 They want to be REALLY sure that you actually 
                                 want to delete your site.
                             </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/deleting-a-pantheon-site/05_deletesite_popup2.png" 
-                                alt="Typing out the name of your site to confirm deletion"
-                            >
-                            <figcaption>
-                                Typing out the name of your site to confirm deletion
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
                             <p>
                                 Once you've typed out the name of your Pantheon 
                                 site EXACTLY, the [Delete This Site] button 
@@ -226,11 +193,11 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/deleting-a-pantheon-site/06_deletesite_popup2_button.png" 
-                                alt="Clicking the [Delete This Site] button"
+                                src="images/deleting-a-pantheon-site/pantheon-deletion-3-dialog.png" 
+                                alt="Typing out the name of your site to confirm deletion"
                             >
                             <figcaption>
-                                Clicking the [Delete This Site] button
+                                Typing out the name of your site to confirm deletion
                             </figcaption>
                         </div>
                     </div>
@@ -241,45 +208,15 @@
                             <p>
                                 After clicking the [Delete This Site] button,
                                 the popup will close, and you'll be returned to 
-                                the Pantheon Site Dashboard.
+                                the Pantheon Dashboard.
                             </p>
                             <p>
-                                For a few moments, it won't look like anything
-                                is happening, but behind the scenes, a script 
-                                is running on the web server to start deleting 
-                                your site.
+                                Your site is being deleted in the background 
+                                behind the scenes.
                             </p>
                             <p>
-                                After a few seconds pass, you'll see a little 
-                                spinning/loading icon next to the Workflows 
-                                link towards the top of the screen.  That
-                                indicates that the deletion process is running.
-                            </p>
-                            <p>
-                                Just wait a little longer, and the deletion 
-                                process will soon be complete.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/deleting-a-pantheon-site/07_deletesite_workflowrunning.png" 
-                                alt="Waiting for the deletion process to run"
-                            >
-                            <figcaption>
-                                Waiting for the deletion process to run
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                Eventually, you'll be brought back to the Sites 
-                                tab of your Pantheon account.
-                            </p>
-                            <p>
-                                You should see that the site you wanted to 
+                                After a few minutes, check back on the Sites 
+                                tab, and you should see that the site you wanted to 
                                 delete is no longer in the Sites list.
                             </p>
                         </div>
