--- a/cookbook/appetizers/pantheon-wordpress-setup.html
+++ b/cookbook/appetizers/pantheon-wordpress-setup.html
@@ -530,7 +530,7 @@
                             <p>
                                 Once on the <b>Pantheon Site</b> Dashboard for 
                                 the site you want to work with, click on the 
-                                [Site Admin] button underneath the Dev tab,
+                                [Dev Admin] button underneath the Dev tab,
                                 underneath the name of your site.
                             </p>
                         </div>
@@ -540,7 +540,7 @@
                                 alt="Clicking on the Site Admin button"
                             />
                             <figcaption>
-                                Clicking on the Site Admin button
+                                Clicking on the Dev Admin button
                             </figcaption>
                         </div>
                     </div>
