--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 5th</h1>
-            <h3>Week 19 Day 2 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for January 6th</h1>
+            <h3>Week 19 Day 3 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Are you an early bird, or a night owl?
+                            Coffee? Tea? Or other?
                         </li>
                     </ul>
-                    <div class="img-container more-space light-gray">
+                    <div class="img-container more-space light-green">
                         <img 
-                            src="images/night-owl.webp"
-                            alt="night owl"
+                            src="images/tea-rex.jpg"
+                            alt="tea-rex"
                         >
                     </div>
                 </div>
@@ -32,15 +32,14 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Review</span>CMS, WordPress Dashboard, and Pages vs Posts</li>
-                            <li><span class="type">PowerPoint</span>Intro to WordPress UI - Block Editor</li>
+                            <li><span class="type">Demo</span>Container Blocks I - Cover and Media & Text Blocks</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Basic Blocks in the Block Editor</li>
+                            <li><span class="type">Demo</span>Container Blocks II - Gallery and Columns Blocks</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -52,12 +51,12 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>My First Blog Post</li>
+                            <li><span class="type">Exercise</span>My Second Blog Post</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>My First Blog Post</li>
+                        <li><span class="type">Exercise</span>My Second Blog Post</li>
                     </ul>
                 </div>
             </div>
