--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,21 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 6th</h1>
-            <h3>Week 19 Day 3 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for January 7th</h1>
+            <h3>Week 19 Day 4 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Coffee? Tea? Or other?
+                            What is one thing you really like and one thing you 
+                            really dislike about WordPress so far?
                         </li>
                     </ul>
-                    <div class="img-container more-space light-green">
+                    <div class="img-container more-space dark-blue">
                         <img 
-                            src="images/tea-rex.jpg"
-                            alt="tea-rex"
+                            src="images/overthinking.webp"
+                            alt="overthinking"
                         >
                     </div>
                 </div>
@@ -32,14 +33,14 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Container Blocks I - Cover and Media & Text Blocks</li>
+                            <li><span class="type">Demo</span>Blocks for Layout</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Container Blocks II - Gallery and Columns Blocks</li>
+                            <li><span class="type">Demo</span>Anchors and Internal links</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -51,13 +52,15 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>My Second Blog Post</li>
+                            <li><span class="type">Exercise</span>Wiki Page with Sidebar</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
-                    <ul>
-                        <li><span class="type">Exercise</span>My Second Blog Post</li>
-                    </ul>
+                    <div class="wrapper outline">
+                        <ul>
+                            <li><span class="type">Exercise</span>Wiki Page with Sidebar</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
