--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,21 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 8th</h1>
-            <h3>Week 19 Day 5 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for January 9th</h1>
+            <h3>Week 20 Day 1 (Customizing WordPress)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you had to choose, would you pick extreme cold? 
-                            or extreme heat?
+                            What is your go-to comfort food?
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/procrastination.webp"
-                            alt="procrastination"
+                            src="images/feelingsnacky.jpg"
+                            alt="feeling snacky"
                         >
                     </div>
                 </div>
@@ -33,14 +32,16 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Recipe Page (WordPress)</li>
+                            <li><span class="type">Quiz</span>Intro to WordPress</li>
+                            <li><span class="type">Survey</span>Week 19 (Intro to CMS) Wrap Up</li>
+                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Recipe Page (WordPress) [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -52,14 +53,15 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
-                            <li><span class="type">Project</span>Recipe Page (WordPress) [cont.]</li>
+                            <li><span class="type">Exercise</span>Replicating Raycon - About Us</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Project</span>Recipe Page (WordPress)</li>
+                            <li><span class="type">Quiz</span>Intro to WordPress</li>
+                            <li><span class="type">Survey</span>Week 19 (Intro to CMS) Wrap Up</li>
+                            <li><span class="type">Exercise</span>Replicating Raycon - About Us</li>
 
                         </ul>
                     </div>
