--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,18 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 9th</h1>
-            <h3>Week 20 Day 1 (Customizing WordPress)</h3>
+            <h1>GDWD 105 - Agenda for January 12th</h1>
+            <h3>Week 20 Day 2 (Customizing WordPress)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>
-                            What is your go-to comfort food?
-                        </li>
+                        <li>What is one of your favorite restaurants?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-red">
                         <img 
-                            src="images/feelingsnacky.jpg"
-                            alt="feeling snacky"
+                            src="images/pho-fox.webp"
+                            alt="pho-fox"
                         >
                     </div>
                 </div>
@@ -32,16 +30,16 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Intro to WordPress</li>
-                            <li><span class="type">Survey</span>Week 19 (Intro to CMS) Wrap Up</li>
-                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
+                            <li><span class="type">Demo</span>Custom Menus</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation [cont.]</li>
+                            <li><span class="type">Demo</span>Column Blocks for Spacing, and Row Group Blocks</li>
+                            <li><span class="type">Demo</span>Backing up your WordPress Site</li>
+                            <li><span class="type">Extra Credit</span>Backing up your WordPress Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -53,16 +51,14 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Replicating Raycon - About Us</li>
+                            <li><span class="type">Exercise</span>Replicating Raycon - Deals</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Quiz</span>Intro to WordPress</li>
-                            <li><span class="type">Survey</span>Week 19 (Intro to CMS) Wrap Up</li>
-                            <li><span class="type">Exercise</span>Replicating Raycon - About Us</li>
-
+                            <li><span class="type">Extra Credit</span>Backing up your WordPress Site</li>
+                            <li><span class="type">Exercise</span>Replicating Raycon - Deals</li>
                         </ul>
                     </div>
                 </div>
