--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,21 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 12th</h1>
-            <h3>Week 20 Day 2 (Customizing WordPress)</h3>
+            <h1>GDWD 105 - Agenda for January 13th</h1>
+            <h3>Week 20 Day 3 (Customizing WordPress)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is one of your favorite restaurants?</li>
+                        <li>What is your favorite snack food/dessert?</li>
                     </ul>
-                    <div class="img-container more-space dark-red">
+                    <div class="img-container">
                         <img 
-                            src="images/pho-fox.webp"
-                            alt="pho-fox"
+                            src="images/snacks.webp"
+                            alt="snack panda"
                         >
-                    </div>
-                </div>
+                    </div>                </div>
 
                 <div id="agenda">
                     <h2>Before Lunch</h2>
@@ -30,16 +29,14 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Custom Menus</li>
+                            <li><span class="type">Demo</span>Google Fonts Plugin</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Column Blocks for Spacing, and Row Group Blocks</li>
-                            <li><span class="type">Demo</span>Backing up your WordPress Site</li>
-                            <li><span class="type">Extra Credit</span>Backing up your WordPress Site</li>
+                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -51,14 +48,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Replicating Raycon - Deals</li>
+                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Market Page) [cont.]</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Extra Credit</span>Backing up your WordPress Site</li>
-                            <li><span class="type">Exercise</span>Replicating Raycon - Deals</li>
+                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
                         </ul>
                     </div>
                 </div>
