--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,21 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 13th</h1>
-            <h3>Week 20 Day 3 (Customizing WordPress)</h3>
+            <h1>GDWD 105 - Agenda for January 14th</h1>
+            <h3>Week 20 Day 4 (Customizing WordPress)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite snack food/dessert?</li>
+                        <li>What is your favorite genre of story to read?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/snacks.webp"
-                            alt="snack panda"
+                            src="images/books_happy_place.jpg"
+                            alt="books happy place"
                         >
-                    </div>                </div>
+                    </div>                
+                </div>
 
                 <div id="agenda">
                     <h2>Before Lunch</h2>
@@ -29,14 +30,14 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Google Fonts Plugin</li>
+                            <li><span class="type">Demo</span>Classic Themes vs Block Themes</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
+                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Technology Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -48,13 +49,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Market Page) [cont.]</li>
+                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Technology Page) [cont.]</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
+                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Technology Page)</li>
                         </ul>
                     </div>
                 </div>
