--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 14th</h1>
-            <h3>Week 20 Day 4 (Customizing WordPress)</h3>
+            <h1>GDWD 105 - Agenda for January 15th</h1>
+            <h3>Week 20 Day 5 (Customizing WordPress)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite genre of story to read?</li>
+                        <li>What is one of your favorite TV series/anime?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space-offset">
                         <img 
-                            src="images/books_happy_place.jpg"
-                            alt="books happy place"
+                            src="images/tv.webp"
+                            alt="tv"
                         >
-                    </div>                
+                    </div>        
                 </div>
 
                 <div id="agenda">
@@ -30,14 +30,15 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Classic Themes vs Block Themes</li>
+                            <li><span class="type">Demo</span>Homepage Settings</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Technology Page)</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -49,13 +50,14 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Technology Page) [cont.]</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Technology Page)</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
                         </ul>
                     </div>
                 </div>
