--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 15th</h1>
-            <h3>Week 20 Day 5 (Customizing WordPress)</h3>
+            <h1>GDWD 105 - Agenda for January 16th</h1>
+            <h3>Week 21 Day 1 (Intro to HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is one of your favorite TV series/anime?</li>
+                        <li>What would your spirit animal be?</li>
                     </ul>
-                    <div class="img-container more-space-offset">
+                    <div class="img-container">
                         <img 
-                            src="images/tv.webp"
-                            alt="tv"
+                            src="images/spirit-animal-0.jpg"
+                            alt="spirit animal"
                         >
-                    </div>        
+                    </div>   
                 </div>
 
                 <div id="agenda">
@@ -30,15 +30,16 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Homepage Settings</li>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                            <li><span class="type">Quiz</span>Domains, Hosting, and Website Creation</li>
+                            <li><span class="type">Survey</span>Customizing WordPress Wrap Up</li>
+                            <li><span class="type">Powerpoint</span>General Web Development</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -50,14 +51,15 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup [cont.]</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                            <li><span class="type">Quiz</span>Domains, Hosting, and Website Creation</li>
+                            <li><span class="type">Survey</span>Customizing WordPress Wrap Up</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                         </ul>
                     </div>
                 </div>
