--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 16th</h1>
-            <h3>Week 21 Day 1 (Intro to HTML)</h3>
+            <h1>GDWD 105 - Agenda for January 20th</h1>
+            <h3>Week 21 Day 2 (Intro to HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What would your spirit animal be?</li>
+                        <li>Cats? or Dogs? (or both? or neither?)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-blue-gray">
                         <img 
-                            src="images/spirit-animal-0.jpg"
-                            alt="spirit animal"
+                            src="images/cats-vs-dogs.jpeg"
+                            alt="cats vs dogs"
                         >
-                    </div>   
+                    </div>
                 </div>
 
                 <div id="agenda">
@@ -30,16 +30,16 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Domains, Hosting, and Website Creation</li>
-                            <li><span class="type">Survey</span>Customizing WordPress Wrap Up</li>
-                            <li><span class="type">Powerpoint</span>General Web Development</li>
+                            <li><span class="type">Powerpoint</span>Introduction to GitHub</li>
+                            <li><span class="type">Powerpoint</span>Intro to HTML</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
+                            <li><span class="type">Powerpoint</span>HTML Tags and Elements</li>
+                            <li><span class="type">Demo</span>Hello World</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -51,15 +51,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup [cont.]</li>
+                            <li><span class="type">Demo</span>Basic HTML Elements</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Quiz</span>Domains, Hosting, and Website Creation</li>
-                            <li><span class="type">Survey</span>Customizing WordPress Wrap Up</li>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
+                            <li><span class="type">N/A</span></li>
                         </ul>
                     </div>
                 </div>
