--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,18 +8,18 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 20th</h1>
-            <h3>Week 21 Day 2 (Intro to HTML)</h3>
+            <h1>GDWD 105 - Agenda for January 21st</h1>
+            <h3>Week 21 Day 3 (Intro to HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Cats? or Dogs? (or both? or neither?)</li>
+                        <li>Would you prefer a staycation? or a destination vacation?</li>
                     </ul>
-                    <div class="img-container more-space dark-blue-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/cats-vs-dogs.jpeg"
-                            alt="cats vs dogs"
+                            src="images/island-vacation.jpg"
+                            alt="cat on an island turtle"
                         >
                     </div>
                 </div>
@@ -30,16 +30,15 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Introduction to GitHub</li>
-                            <li><span class="type">Powerpoint</span>Intro to HTML</li>
+                            <li><span class="type">Kahoot</span>HTML Tags & Elements Review</li>
+                            <li><span class="type">Powerpoint</span>HTML Parents, Children, and Void Elements</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>HTML Tags and Elements</li>
-                            <li><span class="type">Demo</span>Hello World</li>
+                            <li><span class="type">Demo</span>Text Styling Elements</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -51,13 +50,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Basic HTML Elements</li>
+                            <li><span class="type">Exercise</span>Random Facts Sheet</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">N/A</span></li>
+                            <li><span class="type">Exercise</span>Random Facts Sheet</li>
                         </ul>
                     </div>
                 </div>
