--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -41,7 +41,7 @@
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Unordered List Elements</li>
+                            <li><span class="type">Demo</span>Ordered List Elements</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
