--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,21 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 22nd</h1>
-            <h3>Week 21 Day 4 (Intro to HTML)</h3>
+            <h1>GDWD 105 - Agenda for January 23rd</h1>
+            <h3>Week 21 Day 5 (Intro to HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is one of your favorite ice cream flavors? 
-                            Any toppings you like to add?
+                            <li>What is (or was) your favorite breakfast cereal?</li>
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/icecream-cats.jpg"
-                            alt="lazy sundae"
+                            src="images/kamehamehos.jpeg"
+                            alt="kamehamehos"
                         >
                     </div>
                 </div>
@@ -33,15 +32,16 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Unordered List Elements</li>
-                            <li><span class="type">Powerpoint</span>Clean Code Part 1</li>
+                            <li><span class="type">Powerpoint</span>Intro to HTML Attributes</li>
+                            <li><span class="type">Demo</span>Image Elements</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Ordered List Elements</li>
+                            <li><span class="type">Powerpoint</span>Clean Code Part 2</li>
+                            <li><span class="type">Project</span>Wiki Page (Code)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -53,13 +53,14 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Recipe Page (Code)</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints</li> 
+                            <li><span class="type">Project</span>Wiki Page (Code) [cont.]</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Exercise</span>Recipe Page (Code)</li>
+                            <li><span class="type">Project</span>Wiki Page (Code)</li>
                         </ul>
                     </div>
                 </div>
