--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 23rd</h1>
-            <h3>Week 21 Day 5 (Intro to HTML)</h3>
+            <h1>GDWD 105 - Agenda for January 26th</h1>
+            <h3>Week 22 Day 1 (Intermediate HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            <li>What is (or was) your favorite breakfast cereal?</li>
+                            <li>What is one way you motivate yourself?</li>
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/kamehamehos.jpeg"
-                            alt="kamehamehos"
+                            src="images/motivation.png"
+                            alt="motivation"
                         >
                     </div>
                 </div>
@@ -32,16 +32,16 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Intro to HTML Attributes</li>
-                            <li><span class="type">Demo</span>Image Elements</li>
+                            <li><span class="type">Quiz</span>Intro to HTML</li>
+                            <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
+                            <li><span class="type">Kahoot</span>HTML Attributes Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Clean Code Part 2</li>
-                            <li><span class="type">Project</span>Wiki Page (Code)</li>
+                            <li><span class="type">Demo</span>Internal Anchors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -53,14 +53,15 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Hints</li> 
-                            <li><span class="type">Project</span>Wiki Page (Code) [cont.]</li>
+                            <li><span class="type">Exercise</span>Mystery Boxes</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Project</span>Wiki Page (Code)</li>
+                            <li><span class="type">Quiz</span>Intro to HTML</li>
+                            <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
+                            <li><span class="type">Exercise</span>Mystery Boxes</li>
                         </ul>
                     </div>
                 </div>
