revised html gallery

--- a/cookbook/examples/html-gallery/index.html
+++ b/cookbook/examples/html-gallery/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML Galleries - Advanced</title>
+        <title>HTML Galleries</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Welcome to the Digital Museum</h1>
-        <h5>Directions</h5>
+        <h4>Directions</h4>
         <ul>
             <li><a href="index.html">Entrance</a></li>
-            <li><a href="mixed-wide.html">Mixed Wide Gallery (3x2)</a></li>
-            <li><a href="mixed-tall.html">Mixed Tall Gallery (2x3)</a></li>
+            <li><a href="wide.html">Wide Gallery (3x2)</a></li>
+            <li><a href="tall.html">Tall Gallery (2x3)</a></li>
         </ul>
         <br><br><br>
 
@@ -21,7 +21,5 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <img src="images/museum.jpg" alt="museum" width="1225">
         </div>
-
-        <br><br><br><br><br><br>
     </body>
 </html>
