--- a/cookbook/examples/html-gallery/mixed-tall.html
+++ b/cookbook/examples/html-gallery/mixed-tall.html
@@ -10,7 +10,7 @@
         <h1>You are in the Mixed Tall Gallery</h1>
         <h5>Directions</h5>
         <ul>
-            <li><a href="index.html">Entrance</a></li>
+            <li><a href="advanced.html">Entrance</a></li>
             <li><a href="mixed-wide.html">Mixed Wide Gallery (3x2)</a></li>
             <li><a href="mixed-tall.html">Mixed Tall Gallery (2x3)</a></li>
         </ul>
