--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 27th</h1>
-            <h3>Week 22 Day 2 (Intermediate HTML)</h3>
+            <h1>GDWD 105 - Agenda for January 28th</h1>
+            <h3>Week 22 Day 3 (Intermediate HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            <li>Do you see the glass as half empty or half full?</li>
+                            <li>What was one of your favorite Saturday morning cartoons growing up?</li>
                         </li>
                     </ul>
-                    <div class="img-container more-space ash-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/good-day.webp"
-                            alt="good day"
+                            src="images/atla_cartoon.jpg"
+                            alt="avatar last airbender animals"
                         >
                     </div>
                 </div>
@@ -32,14 +32,15 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Indentation Review</li>
+                            <li><span class="type">Exercise</span>HTML Project Warm-up</li>
+                            <li><span class="type">Demo</span>Font Awesome Icon Library</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>External Anchors</li>
+                            <li><span class="type">Exercise</span>HTML Galleries</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -51,13 +52,15 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Choose Your Own Adventure</li>
+                            <li><span class="type">Exercise</span>HTML Galleries [cont.]</li>
+                            <li><span class="type">Extra Credit</span>HTML Potluck Project - Cookbook Checkpoint [optional for today]</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Exercise</span>Choose Your Own Adventure</li>
+                            <li><span class="type">Exercise</span>HTML Project Warm-up</li>
+                            <li><span class="type">Exercise</span>HTML Galleries</li>
                         </ul>
                     </div>
                 </div>
