--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 28th</h1>
-            <h3>Week 22 Day 3 (Intermediate HTML)</h3>
+            <h1>GDWD 105 - Agenda for January 29th</h1>
+            <h3>Week 22 Day 4 (Intermediate HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            <li>What was one of your favorite Saturday morning cartoons growing up?</li>
+                            <li>What is one of your favorite Disney movies?</li>
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/atla_cartoon.jpg"
-                            alt="avatar last airbender animals"
+                            src="images/cozy-beast-and-belle-teeturtle.jpg"
+                            alt="beauty and the beast"
                         >
                     </div>
                 </div>
@@ -32,15 +32,14 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>HTML Project Warm-up</li>
-                            <li><span class="type">Demo</span>Font Awesome Icon Library</li>
+                            <li><span class="type">Kahoot</span>HTML Children Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>HTML Galleries</li>
+                            <li><span class="type">Extra Credit</span>HTML Potluck Project - Cookbook Checkpoint</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -52,15 +51,14 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>HTML Galleries [cont.]</li>
-                            <li><span class="type">Extra Credit</span>HTML Potluck Project - Cookbook Checkpoint [optional for today]</li>
+                            <li><span class="type">Extra Credit</span>HTML Potluck Project - Movie Showcase Checkpoint</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Exercise</span>HTML Project Warm-up</li>
-                            <li><span class="type">Exercise</span>HTML Galleries</li>
+                            <li><span class="type">Extra Credit</span>HTML Potluck Project - Cookbook Checkpoint</li>
+                            <li><span class="type">Extra Credit</span>HTML Potluck Project - Movie Showcase Checkpoint</li>
                         </ul>
                     </div>
                 </div>
